src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-attachment: fixed;
  background-image:url("abstract-astro-astronomy-956999.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  overflow-x: hidden;
  height: 101%;
  margin-bottom: 0.01em;
}
html {
  height: 101%;
  margin-bottom: 0.01em;
}
code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}
h3{
  text-align: center;
  color:white;
  font-family: 'Bungee', cursive;
  font-size:3rem;
}
hr{
  background-color:white;
  height: 3px;
  width: 100%;
}
.column{
  color:white;
  font-size:7rem;
  text-align: center;
  height: 200px;
  padding:0;
}
i{
  position: relative;
  top:10px;
}
.column-contact{
  color:white;
  font-size:5rem;
  text-align: center;
  height: 120px;
}
.column-contact i{
  top:0px;
}
.column-text{
  color:white;
  font-size:2rem;
  text-align: left;
  height: auto;
}
.column-text p{
  padding: 2rem;
}
.container{
  max-width: 600px;
  padding:0;
}
.column-portfolio{
  color:white;
  padding: 10px;
  min-height: 300px;
}
.column-portfolio img{
  margin: 0!important;
}
.column-portfolio .fa-github{
  text-align: right;
}
.column-item *{
  display: inline-block;
  margin: 0;
  padding: 0;
}
.column-item{
  padding: 1rem!important;
  color:white;
  text-align: center;
  height: auto;
}
.column-portfolio i{
  float:right;
  top:5px;
}
.column-portfolio p{
  float:left;

}
.column-portfolio img{
  width: 100%;
  height: 80%;
  margin-top:5%;
}
.column-portfolio-arrow{
    color:white;
    font-size:7rem;
    text-align: center;
    min-height: 300px;
}
.column-portfolio-arrow i{
  top:60px;
}
.fa-arrow-right:hover, .fa-arrow-left:hover, .fa-linkedin-in:hover, .fa-github:hover, .fa-envelope:hover{
  color:grey;
  transition: color 200ms linear;
}
.fa-arrow-left,.fa-arrow-right, .fa-linkedin-in, .fa-github, .fa-envelope{
  color:white;
  transition: color 200ms linear;
}
.container-page-1{
  position:absolute;
  top:10vh;
}
.container-page-2{
  position:absolute;
  top:10vh;
}
.container-page-3{
  position:absolute;
  top:10vh;
}
.row{
  margin:0;
}
.col{
  padding:0;
}

.fade-enter {
  opacity: 0;
  z-index: 1;
}
.fade-enter.fade-enter-active {
    opacity: 1;
    transition: opacity 500ms linear 500ms;
}

/* exit */
.fade-exit {
    opacity: 1;
}
.fade-exit.fade-exit-active {
    opacity: 0;
    transition: opacity 500ms linear;
}
.fade-exit-done {
  opacity: 0;
}
.column-text{
  padding:10px;
}
.column-contact i {
  position: relative;
  top:-3px;
}

@media screen and (min-width: 481px) and (max-width: 576px){
  .container{
    max-width: 400px;
  }
  h3{
    text-align: center;
    color:white;
    font-family: 'Bungee', cursive;
    font-size:2rem;
  }
  .column-text{
    color:white;
    font-size:1.5rem;
    text-align: left;
    height: auto;
  }
  .column-text p{
    padding: 1rem;
  }
  .column-contact{
    color:white;
    font-size:2rem;
    text-align: center;
    height: 75px;
  }
  .column-contact i {
    position: relative;
    top:12px;
  }
  .column-portfolio{
    height: 400px;
  }
  .column-portfolio-arrow{
    height: 400px;
    padding: 10px;
  }
  .column-portfolio-arrow i{
    top: 100px;
  }
}
@media screen and (max-width: 480px){
  .column{
    color:white;
    font-size:3.5rem;
    text-align: center;
    height: 150px;
  }
  .container{
    max-width: 300px;
  }
  h3{
    text-align: center;
    color:white;
    font-family: 'Bungee', cursive;
    font-size:1rem;
  }
  i{
    position: relative;
    top:30px;
  }
  .column-text{
    color:white;
    font-size:1rem;
    text-align: left;
    height: auto;
  }
  .column-text p{
    padding: 1rem;
  }
  .column-contact{
    color:white;
    font-size:1.5rem;
    text-align: center;
    height: 60px;
  }
  .column-contact i {
    position: relative;
    top:10px;
  }
  .column-portfolio{
    height: 300px;
  }
  .column-portfolio-arrow i{
    top: 60px;
  }
}

